--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }
       </style>
       <img src="./cardapio.jpeg" alt="menu" class="menuImage">
+      <img src="./cardapio-p2.jpeg" alt="menu" class="menuImage">
       </div>
 </body>
 </html>
