--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
         }
       </style>
       <img src="./cardapio.jpeg" alt="menu" class="menuImage">
+  </div>
+  <div class="menu">
+    <style>
+      .menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        background-color: #fff;
+      }
+      .menuImage {
+          width: 100%;
+          max-width: 900px;
+        }
+      </style>
       <img src="./cardapio-p2.jpeg" alt="menu" class="menuImage">
-      </div>
+  </div>
 </body>
 </html>
