--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </style>
       <img src="./cardapio.jpeg" alt="menu" class="menuImage">
   </div>
-  <div class="menu">
+  <!-- <div class="menu">
     <style>
       .menu {
         display: flex;
@@ -38,6 +38,6 @@
         }
       </style>
       <img src="./cardapio-p2.jpeg" alt="menu" class="menuImage">
-  </div>
+  </div> -->
 </body>
 </html>
