feat: update to menu

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           max-width: 900px;
         }
       </style>
-      <img src="./cardapio.jpeg" alt="menu" class="menuImage">
+      <img src="./cardapio_1.jpeg" alt="menu" class="menuImage">
   </div>
-  <!-- <div class="menu">
+  <div class="menu">
     <style>
       .menu {
         display: flex;
@@ -37,7 +37,7 @@
           max-width: 900px;
         }
       </style>
-      <img src="./cardapio-p2.jpeg" alt="menu" class="menuImage">
-  </div> -->
+      <img src="./cardapio_2.jpeg" alt="menu" class="menuImage">
+  </div>
 </body>
 </html>
